name:                  fun
version:               0.0.4
synopsis:              Utilities for a simple, implicitly typed functional
                       language.
description:           Project distribution for Mini Project D of the course on
                       Compiler Constructionn (INFOMCCO) at Utrecht University.
license:               AllRightsReserved
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2008 Utrecht University
author:                Stefan Holdermans
maintainer:            Stefan Holdermans <stefan@cs.uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/CourseSoftware
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Simple
cabal-version:         >= 1.2
extra-source-files:    AUTHORS, Makefile, src/CCO/HM/AG.ag,
                       src/CCO/HM/AG/Base.ag, src/CCO/SystemF/AG.ag,
                       src/CCO/SystemF/AG/Base.ag,
                       src/CCO/SystemF/AG/Printing.ag

executable parse-hm
  main-is:             ParseHM.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.HM, CCO.HM.AG, CCO.HM.Base, CCO.HM.Lexer,
                       CCO.HM.Parser
  hs-source-dirs:      src

executable pp-systemf
  main-is:             PpSystemF.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.SystemF, CCO.SystemF.AG, CCO.SystemF.Base
  hs-source-dirs:      src